# iot_repo

./: README.md  coap_client.py  coap_server.py  esp32_mqtt.py  lectura.py  lectura_er.py  lectura_mq.py  main.py  pyproject.toml  sensor.py  sensor_er.py  sensor_mq.py  sensor_mq_pub.py  setup.ps1  setup.sh  setup_mosquitto_tls.sh  ws_client.py  ws_server.py
certs/: mosquitto.org.crt
