[project]
name = "iot-dispositivos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.126.0",
    "pydantic>=2.12.5",
    "requests>=2.31.0",
    "uvicorn>=0.29.0",
    "fastapi-mqtt",
    "paho-mqtt",
    "websockets>=15.0.1",
    "aiocoap>=0.4.17",
]
